# hear-say

./: .gitignore  .oxfmtrc.json  .oxlintrc.json  api.railway.json  package.json  pnpm-lock.yaml  turbo.json  web.railway.json  zellij-layout.kdl
.todos/: batch-delete.md  bookmarks-notes.md  in-document-search.md  keyboard-shortcut-cheatsheet.md  last-opened-timestamp.md  processing-progress.md  reading-stats.md  retry-failed-ocr.md  split-view-scroll-sync.md  text-size-font.md  tts-pitch-control.md
.todos/completed/: dark-mode.md  document-folders.md  document-rename.md  highlight-color.md
apps/api/: .gitignore  Dockerfile  package.json  pyproject.toml
apps/api/src/: env.py  main.py
apps/api/src/routers/: ocr.py
apps/api/src/services/: cache.py  llm.py  ocr.py
apps/web/: Dockerfile  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
apps/web/public/: site.webmanifest
apps/web/src/: routeTree.gen.ts  router.tsx  styles.css  vite.d.ts
apps/web/src/components/: AnnotationPopover.tsx  AnnotationsPanel.tsx  AudioPlayer.tsx  InlineEdit.tsx  ModelLoader.tsx  PDFDropzone.tsx  PageView.tsx  PdfViewer.tsx  ProcessingSteps.tsx  TagBadge.tsx  TagFilterBar.tsx  TagPicker.tsx  ThemeToggle.tsx
apps/web/src/components/ui/: accordion.tsx  alert.tsx  (+51 more)
apps/web/src/hooks/: use-media-query.ts  useDarkMode.ts  useReaderPrefs.ts
apps/web/src/lib/: api.ts  audioQueue.ts  convex-utils.ts  env.ts
apps/web/src/routes/: __root.tsx  index.tsx  login.tsx  reader.$docId.tsx  signup.tsx  tags.$tagId.tsx
apps/web/src/workers/: tts.worker.ts
scripts/: setup-models.sh
